fix containers in base template

--- a/index.html
+++ b/index.html
@@ -14,25 +14,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
+	<div class="container">
 	 
-    <div class="container"> 
         <!-- Header --> 
         <div class="header"> 
             <nav> 
-                <ul class="nav nav-pills pull-right"> 
-                    <li role="presentation" class="active"><a href="./index.html">Blog</a></li> 
+                <ul class="nav  pull-right"> 
+                    <li role="presentation"><a href="./index.html">Blog</a></li> 
                     <li role="presentation"><a href="./pages/about.html">About</a></li> 
                 </ul> 
             </nav> 
  
             <h3 class="text-muted">$_Bashful Bytes</h3> 
         </div> 
-  
 	 
-  <hr> 
 
-  <body>
-	<div class="container">
+  	<body>
 		
 
 
@@ -56,6 +53,6 @@
       			<center>&copy; Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
 	  		
     	</footer>
+  	</body>
 	</div>
-  </body>
 </html>
