playing with headers still, change breadcrumbs

--- a/index.html
+++ b/index.html
@@ -14,18 +14,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
+
 	<div class="container">
 	 
         <!-- Header --> 
         <div class="header"> 
-            <nav> 
-			<ul class="breadcrumb">
-            	<h3 class="text-muted">$_Bashful Bytes</h3> 
-  				<li><a href="./index.html">Blog</a></li>
+		 
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+			<div class="navbar-header">
+			  <a class="navbar-brand" href="./index.html">$_Bashful Bytes</a>
+			</div>
+
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			  <ul class="nav navbar-nav">
+			  
+			  </ul>
+			  <ul class="nav navbar-nav navbar-right">
+				<li><a href="./index.html">Blog</a></li>
   				<li><a href="./pages/about.html">About</a></li>
-			</ul>
- 
-          	</nav> 
+			  </ul>
+			</div>
+		  </div>
+		</nav>
         </div> 
 	 
 
