add a base template for pages/posts, different from archive

--- a/base_archive.html
+++ b/base_archive.html
@@ -16,7 +16,7 @@
 
 	<div class="container">
 	
-	{% block header %} 
+	 
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 			  <ul class="nav navbar-nav">
@@ -28,17 +28,26 @@
 			  </ul>
 		  </div>
 		</nav>
-	{% endblock %} 
+	 
 
   	<body>
-    	{% block content %}{% endblock %}
+		<h3> Recent </h3>
+		
+		<hr>
+		<h3> Research </h3>
+		
+		<hr>
+		<h3> Programming </h3>
+		
+		<hr>
+		<h3> Random </h3>
+		
 
-    	<footer class="footer">
-      		{% block footer %}
+      	
+    		<footer class="footer">
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
-	  		{% endblock %}
-    	</footer>
-
+    		</footer>
+	  	
   	</body>
 	</div>
 </html>
