--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   	<body>
 		<h3> Recent </h3>
 		
-
+<p><a href="./posts/templates/test4.html">Test 4</a><br />
+<a href="./posts/templates/test5.html">Fifth Test</a><br />
+<a href="./posts/templates/test6.html">Sixth Test</a>  </p>
 
 		<hr>
 		<h3> Research </h3>
@@ -49,11 +51,13 @@
 		<hr>
 		<h3> Random </h3>
 		
-<p><a href="./posts/test1.html">test</a><br />
-<a href="./posts/test3.html">Test3</a><br />
-<a href="./posts/test2.html">test2</a><br />
-<a href="./posts/test.html">first test</a><br />
-<a href="./posts/test4.html">test4</a>  </p>
+<p><a href="./posts/templates/test6.html">Sixth Test</a><br />
+<a href="./posts/templates/test.html">Initial Test</a><br />
+<a href="./posts/templates/test2.html">Test 2</a><br />
+<a href="./posts/templates/test3.html">Test 3</a><br />
+<a href="./posts/templates/test1.html">Test 1</a><br />
+<a href="./posts/templates/test4.html">Test 4</a><br />
+<a href="./posts/templates/test5.html">Fifth Test</a>  </p>
 
 
       	
