--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
   	<body>
 		<h3> Recent </h3>
 		
-<p><a href="./posts/templates/test4.html">Test 4</a><br />
-<a href="./posts/templates/test5.html">Fifth Test</a><br />
-<a href="./posts/templates/test6.html">Sixth Test</a>  </p>
+<p><a href="./posts/test6.html">2016-06-19</a><br />
+<a href="./posts/test.html">2016-06-18</a><br />
+<a href="./posts/test2.html">2016-06-18</a><br />
+<a href="./posts/test3.html">2016-06-18</a><br />
+<a href="./posts/test1.html">2016-06-18</a>  </p>
 
 		<hr>
 		<h3> Research </h3>
@@ -51,13 +53,13 @@
 		<hr>
 		<h3> Random </h3>
 		
-<p><a href="./posts/templates/test6.html">Sixth Test</a><br />
-<a href="./posts/templates/test.html">Initial Test</a><br />
-<a href="./posts/templates/test2.html">Test 2</a><br />
-<a href="./posts/templates/test3.html">Test 3</a><br />
-<a href="./posts/templates/test1.html">Test 1</a><br />
-<a href="./posts/templates/test4.html">Test 4</a><br />
-<a href="./posts/templates/test5.html">Fifth Test</a>  </p>
+<p><a href="./posts/test6.html">Sixth Test</a><br />
+<a href="./posts/test.html">Initial Test</a><br />
+<a href="./posts/test2.html">Test 2</a><br />
+<a href="./posts/test3.html">Test 3</a><br />
+<a href="./posts/test1.html">Test 1</a><br />
+<a href="./posts/test4.html">Test 4</a><br />
+<a href="./posts/test5.html">Fifth Test</a>  </p>
 
 
       	
