--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   	<body>
 		<h3> Recent </h3>
 		
-<p><a href="./posts/test6.html">2016-06-19</a><br />
-<a href="./posts/test.html">2016-06-18</a><br />
-<a href="./posts/test2.html">2016-06-18</a><br />
-<a href="./posts/test3.html">2016-06-18</a><br />
-<a href="./posts/test1.html">2016-06-18</a>  </p>
+<p><a href="./posts/test6.html">Sixth Test</a><br />
+<a href="./posts/test.html">Initial Test</a><br />
+<a href="./posts/test2.html">Test 2</a><br />
+<a href="./posts/test3.html">Test 3</a><br />
+<a href="./posts/test1.html">Test 1</a>  </p>
 
 		<hr>
 		<h3> Research </h3>
