add wells, edit readme

--- a/base.html
+++ b/base.html
@@ -31,6 +31,9 @@
 	 
 
   	<body>
+
+
+	<div class="well well-lg">
 		<h3> Recent </h3>
 		
 		<hr>
@@ -42,7 +45,7 @@
 		<hr>
 		<h3> Random </h3>
 		
-
+	</div>
       	
     		<footer class="footer">
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
