--- a/pages/about.html
+++ b/pages/about.html
@@ -32,6 +32,8 @@
 	 
 
   	<body>
+
+	<div class="well well-lg">
     	
 <h2>Hello!</h2>
 
@@ -78,6 +80,8 @@ analyzing thought and and the amelioration of thought systems,
 which altogether forms a field of studying the beauty of computer
 science.</p>
 
+
+	</div>
 
     	<footer class="footer">
       		
