--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 	 
 
   	<body>
+
+
+	<div class="well well-lg">
 		<h3> Recent </h3>
 		
 <p><a href="./posts/test6.html">Sixth Test</a><br />
@@ -61,7 +64,7 @@
 <a href="./posts/test4.html">Test 4</a><br />
 <a href="./posts/test5.html">Fifth Test</a>  </p>
 
-
+	</div>
       	
     		<footer class="footer">
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
