--- a/pages/base.html
+++ b/pages/base.html
@@ -31,8 +31,12 @@
 	 
 
   	<body>
+
+	<div class="well well-lg">
     	
 		
+	</div>
+
     	<footer class="footer">
       		
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
