messing with tables and wells

--- a/index.html
+++ b/index.html
@@ -35,34 +35,60 @@
 
 
 	<div class="well well-lg">
-		<h3> Recent </h3>
+		<h2> Recent </h2>
 		
-<p><a href="./posts/test6.html">Sixth Test</a><br />
-<a href="./posts/test.html">Initial Test</a><br />
-<a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a><br />
-<a href="./posts/test1.html">Test 1</a>  </p>
+<table class="table table-striped table-hover ">
+  <tbody>
+    <tr>
+<td>[Sixth Test](./posts/test6.html)</td>
+
+<p><td><a href="./posts/test.html">Initial Test</a></td><br />
+<td><a href="./posts/test2.html">Test 2</a></td><br />
+<td><a href="./posts/test3.html">Test 3</a></td><br />
+<td><a href="./posts/test1.html">Test 1</a></td>  </p>
+	</tr>
+  </tbody>
+</table>
 
 		<hr>
-		<h3> Research </h3>
+		<h2> Research </h2>
 		
+<table class="table table-striped table-hover ">
+  <tbody>
+    <tr>
 
+	</tr>
+  </tbody>
+</table>
 
 		<hr>
-		<h3> Programming </h3>
+		<h2> Programming </h2>
 		
+<table class="table table-striped table-hover ">
+  <tbody>
+	<tr>
 
+	</tr>
+  </tbody>
+</table>
 
 		<hr>
-		<h3> Random </h3>
+		<h2> Random </h2>
 		
-<p><a href="./posts/test6.html">Sixth Test</a><br />
-<a href="./posts/test.html">Initial Test</a><br />
-<a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a><br />
-<a href="./posts/test1.html">Test 1</a><br />
-<a href="./posts/test4.html">Test 4</a><br />
-<a href="./posts/test5.html">Fifth Test</a>  </p>
+<table class="table table-striped table-hover ">
+  <tbody>
+	<tr>	
+<td>[Sixth Test](./posts/test6.html)</td>
+
+<p><td><a href="./posts/test.html">Initial Test</a></td><br />
+<td><a href="./posts/test2.html">Test 2</a></td><br />
+<td><a href="./posts/test3.html">Test 3</a></td><br />
+<td><a href="./posts/test1.html">Test 1</a></td><br />
+<td><a href="./posts/test4.html">Test 4</a></td><br />
+<td><a href="./posts/test5.html">Fifth Test</a></td>  </p>
+	</tr>
+  </tbody>
+</table>
 
 	</div>
       	
