change hr color

--- a/base.html
+++ b/base.html
@@ -36,13 +36,13 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Research </h2>
 		
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Programming </h2>
 		
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Random </h2>
 		
 	</div>
