--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
 <a href="./posts/test3.html">Test 3</a><br />
 <a href="./posts/test1.html">Test 1</a>  </p>
 
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Research </h2>
 		
 
 
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Programming </h2>
 		
 
 
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Random </h2>
 		
 <p><a href="./posts/test6.html">Sixth Test</a><br />
