playing with scaling

--- a/base.html
+++ b/base.html
@@ -36,7 +36,7 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		
-		<hr style="border: #00264d" />
+		<hr style="border: 1px solid #00264d translate: scale(0.1)" />
 		<h2> Research </h2>
 		
 		<hr style="border: .5px solid #00264d" />
