--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a href="./posts/test3.html">Test 3</a><br />
 <a href="./posts/test1.html">Test 1</a>  </p>
 
-		<hr style="border: #00264d" />
+		<hr style="border: 1px solid #00264d translate: scale(0.1)" />
 		<h2> Research </h2>
 		
 
