--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		
-<p><a href="./posts/test6.html">Sixth Test</a><br />
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<a href="./posts/test6.html">Sixth Test</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
 <a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a><br />
-<a href="./posts/test1.html">Test 1</a>  </p>
+<a href="./posts/test3.html">Test 3</a>  </p>
 
 		<hr style="border: 1px solid #dde4e6" />
 		<h2> Research </h2>
 		
-
+<p><a href="./posts/PLDI16.html">PLDI 2016</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Programming </h2>
