--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		<h2> Recent </h2>
 		
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
-<a href="./posts/test6.html">Sixth Test</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
-<a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a>  </p>
+<a href="./posts/test1.html">Test 1</a><br />
+<a href="./posts/test4.html">Test 4</a><br />
+<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: 1px solid #dde4e6" />
 		<h2> Research </h2>
@@ -51,16 +51,13 @@
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Programming </h2>
 		
-
+<p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Random </h2>
 		
-<p><a href="./posts/test6.html">Sixth Test</a><br />
+<p><a href="./posts/test1.html">Test 1</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
-<a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a><br />
-<a href="./posts/test1.html">Test 1</a><br />
 <a href="./posts/test4.html">Test 4</a><br />
 <a href="./posts/test5.html">Fifth Test</a>  </p>
 
