add cloud storage post

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
 		
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/test1.html">Test 1</a><br />
-<a href="./posts/test4.html">Test 4</a><br />
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: 1px solid #dde4e6" />
 		<h2> Research </h2>
 		
-<p><a href="./posts/PLDI16.html">PLDI 2016</a>  </p>
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Programming </h2>
