add linux tag, add linux tag post skeleton

--- a/base.html
+++ b/base.html
@@ -43,6 +43,9 @@
 		<h2> Programming </h2>
 		
 		<hr style="border: .5px solid #dde4e6" />
+		<h2> Linux </h2>
+		
+		<hr style="border: .5px solid #dde4e6" />
 		<h2> Random </h2>
 		
 	</div>
