--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		
-<p><a href="./posts/playlist.html">Current Playlist</a><br />
-<a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
 <a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/expletive.html">Expletive</a><br />
+<a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a><br />
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: 1px solid #dde4e6" />
@@ -54,6 +54,11 @@
 		<h2> Programming </h2>
 		
 <p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
+
+		<hr style="border: .5px solid #dde4e6" />
+		<h2> Linux </h2>
+		
+<p><a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Random </h2>
