--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<h2> Recent </h2>
 		
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
-<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
+<a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a><br />
 <a href="./posts/expletive.html">Expletive</a><br />
 <a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a><br />
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
@@ -63,7 +63,8 @@
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Random </h2>
 		
-<p><a href="./posts/playlist.html">Current Playlist</a>  </p>
+<p><a href="./posts/playlist.html">Current Playlist</a><br />
+<a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a>  </p>
 
 	</div>
       	
