typos in about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@ to my personal weblog.  </p>
 <p>Amidst my grad school search, I have come across various weblogs
 of computer scientists in industry, research, and academia. Every 
 single one has aided my search and/or education in one way or another,
-and reading these blogs have become a kind of relaxation for me. The
+and reading these blogs has become a kind of relaxation for me. The
 months leading to grad school applications form a stressful time, and
 so I willingly open my arms to any method of relaxing. <br />
 Reading weblogs also got me thinking about who the busy computer 
@@ -72,7 +72,7 @@ concretize the mystery that happens within one's mind. <br />
 Where does programming language research fit into implementing
 thought? I think PL forms a large piece of the foundation of 
 using computer science to solve problems. PL isn't just 
-making new programming languages or optimizing existing
+about making new programming languages or optimizing existing
 programming languages. To me, PL research 
 is caring about how to better solve computing problems, 
 studying how software systems work and why they work, 
