refactor index creation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -46,22 +45,38 @@
 		<hr style="border: 1px solid #dde4e6" />
 		<h2> Research </h2>
 		
-
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Programming </h2>
 		
-
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Linux </h2>
 		
-
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Random </h2>
 		
-
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
 
 	</div>
       	
