fix global dict pointers

--- a/index.html
+++ b/index.html
@@ -45,38 +45,29 @@
 		<hr style="border: 1px solid #dde4e6" />
 		<h2> Research </h2>
 		
-<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
+<a href="./posts/expletive.html">Expletive</a><br />
+<a href="./posts/parsingderivs.html">Parsing with Derivatives</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Programming </h2>
 		
-<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
+<p><a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Linux </h2>
 		
-<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
+<p><a href="./posts/expect.html">Expect: The Unix Tool</a><br />
+<a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Random </h2>
 		
-<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
-<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
+<p><a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
+<a href="./posts/playlist.html">Current Playlist</a><br />
+<a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a>  </p>
 
 	</div>
       	
