--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Programming </h2>
 		
-<p><a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
+<p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Linux </h2>
@@ -65,7 +64,8 @@
 		<hr style="border: .5px solid #dde4e6" />
 		<h2> Random </h2>
 		
-<p><a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
+<p><a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
 <a href="./posts/playlist.html">Current Playlist</a><br />
 <a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a>  </p>
 
