--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 		<h2> Recent </h2>
 		
 <p><a href="./posts/parsingderivs.html">Parsing with Derivatives</a><br />
-<a href="./posts/expletive.html">Expletive</a><br />
 <a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
 <a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
-<a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
+<a href="./posts/expect.html">Expect: The Unix Tool</a><br />
+<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr style="border: 1px solid #dde4e6" />
 		<h2> Research </h2>
