change about page, add makefile, temporarily give up on homemaking staticjinja

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 	<title>$_Bashful Bytes</title>
     <!-- Templates -->
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap.css">
     <link href="/static/css/bootstrap-glyphicons.css">
@@ -39,8 +40,8 @@
 <p><a href="./posts/parsingderivs.html">Parsing with Derivatives</a><br />
 <a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
-<a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
+<a href="./posts/expect.html">Expect: The Unix Tool</a><br />
+<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr>
 		<h2> Research </h2>
