--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,7 @@
   <head>
 	<title>$_Bashful Bytes</title>
     <!-- Templates -->
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap.css">
     <link href="/static/css/bootstrap-glyphicons.css">
@@ -83,7 +84,7 @@ science.</p>
 <h1>Contact Info</h1>
 
 <div class="row featurette">
-  <div class="col-md-6 text-left">
+  <div class="col-md-5 text-left">
    <h4>Email <a href="/publickey.asc">(pgp)</a></h4>
    <address>
     <a href="mailto:bdevorem@nd.edu"> bdevorem [at] nd [dot] edu</a><br>
@@ -99,7 +100,7 @@ science.</p>
     Notre Dame, IN 46556<br>
    </address>
   </div> 
- <div class="col-md-2 text-left">
+ <div class="col-md-3 text-left">
   <h4>Links</h4>
    <i class="fa fa-github" href="https://github.com/bdevorem"></i>
    <span class="fa fa-bitbucket" href="https://bitbucket.org/bdevorem"></span>
