finally adding correct hrefs to about page links

--- a/pages/base.html
+++ b/pages/base.html
@@ -3,6 +3,7 @@
   <head>
 	<title>$_Bashful Bytes</title>
     <!-- Templates -->
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap.css">
