fill out playlist post, edit gen.py to ignore swaps

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		
-<p><a href="./posts/parsingderivs.html">Parsing with Derivatives</a><br />
-<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
+<p><a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
 <a href="./posts/expect.html">Expect: The Unix Tool</a><br />
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
@@ -48,8 +48,7 @@
 		
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
 <a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
-<a href="./posts/expletive.html">Expletive</a><br />
-<a href="./posts/parsingderivs.html">Parsing with Derivatives</a>  </p>
+<a href="./posts/expletive.html">Expletive</a>  </p>
 
 		<hr>
 		<h2> Programming </h2>
