--- a/index.html
+++ b/index.html
@@ -37,18 +37,16 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		
-<p><a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
+<p><a href="./posts/latex.html">Beauty of LaTex</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
 <a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
-<a href="./posts/expect.html">Expect: The Unix Tool</a><br />
-<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
+<a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
 
 		<hr>
 		<h2> Research </h2>
 		
-<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
-<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
-<a href="./posts/expletive.html">Expletive</a>  </p>
+<p><a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a>  </p>
 
 		<hr>
 		<h2> Programming </h2>
@@ -58,16 +56,25 @@
 		<hr> 
 		<h2> Linux </h2>
 		
-<p><a href="./posts/expect.html">Expect: The Unix Tool</a><br />
-<a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a>  </p>
+<p><a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
 
 		<hr>
 		<h2> Random </h2>
 		
-<p><a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
-<a href="./posts/playlist.html">Current Playlist</a><br />
-<a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a>  </p>
+<p><a href="./posts/playlist.html">Current Playlist</a>  </p>
+
+		<hr>
+		<h2> Unfinished </h2>
+		
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<a href="./posts/ronfagin.html">Ron Fagin Event: SIGMOD/PODS 2016</a><br />
+<a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a><br />
+<a href="./posts/latex.html">Beauty of LaTex</a><br />
+<a href="./posts/expletive.html">Expletive</a><br />
+<a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a><br />
+<a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a>  </p>
+
 
 	</div>
       	
