fill out static site generator a bit more

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <p><a href="./posts/latex.html">Beauty of LaTex</a><br />
 <a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
-<a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
+<a href="./posts/expect.html">Expect: The Unix Tool</a><br />
+<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 
 		<hr>
 		<h2> Research </h2>
